--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="PHOTO/pexels-photo-697244.jpeg" class="d-block w-100" alt="...">
+                <img src="pexels-photo-697244.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Life Elevated Well</h5>
                   <p>Take a New Posetive Step Today</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="PHOTO/pexels-photo-5738032.webp" class="d-block w-100" alt="...">
+                <img src="pexels-photo-5738032.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>You are the First</h5>
                   <p>We  Touch you insured</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="PHOTO/pexels-photo-13010769.jpeg" class="d-block w-100" alt="...">
+                <img src="pexels-photo-13010769.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Be Sure Enough</h5>
                   <p>Good Hands For Good Life</p>
@@ -94,7 +94,7 @@
 
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 col-12 ">
-              <img src="PHOTO/WhatsApp Image 2023-10-28 at 09.03.09 (1).jpeg" width="350px" alt="" >
+              <img src="WhatsApp Image 2023-10-28 at 09.03.09 (1).jpeg" width="350px" alt="" >
             </div>
           </div>
         </div>
@@ -106,9 +106,9 @@
 
           </div>
           <div class="m-5 imgsome">
-            <img src="PHOTO/WhatsApp Image 2023-10-28 at 09.03.11.jpeg" width="480" class="imgsome"><br>
-            <img src="PHOTO/WhatsApp Image 2023-10-28 at 10.21.08.jpeg" alt="" width="500" class="imgsome"><br>
-            <img src="PHOTO/WhatsApp Image 2023-10-28 at 09.09.33.jpeg" alt="" width="500" class="imgsome">
+            <img src="WhatsApp Image 2023-10-28 at 09.03.11.jpeg" width="480" class="imgsome"><br>
+            <img src="WhatsApp Image 2023-10-28 at 10.21.08.jpeg" alt="" width="500" class="imgsome"><br>
+            <img src="WhatsApp Image 2023-10-28 at 09.09.33.jpeg" alt="" width="500" class="imgsome">
           </div>
       </section>
    
