--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 
           </div>
           <div class="m-5 imgsome">
-            <img src="WhatsApp Image 2023-10-28 at 09.03.11.jpeg" width="480" class="imgsome"><br>
+            <img src="WhatsApp Image 2023-10-28 at 09.03.11.jpeg" width="380" class="imgsome"><br>
             <img src="WhatsApp Image 2023-10-28 at 10.21.08.jpeg" alt="" width="500" class="imgsome"><br>
             <img src="WhatsApp Image 2023-10-28 at 09.09.33.jpeg" alt="" width="500" class="imgsome">
+            <img src="WhatsApp Image 2023-10-28 at 09.03.09 (2).jpeg" alt="" width="500" class="imgsome">
           </div>
       </section>
    
