--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6 col-12">
 <h1 class="fs-4 p-5">   Deepak Kumar <span class="text-primary fs-4">SAP,Sirsa</span></h1>
-<p class="p-1">A Great Business Man. Work in The Kotak Life Insurance and Work as a SAP Adviser <br>
+<p class="p-1">A Great Business Man. Work in The Kotak Life Insurance and Work as a <b> SENIOR AGENCY PARTNER</b> <br>
 <b>contact</b> - 9466374048<br><b>Email</b>Deepaklib81@gmail.com
 </p>
 
